# ska-pss-protest

./: .coverage  .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  LICENSE  MANIFEST.in  Makefile  README.md  conftest.py  launch_protest  mid_single_beam.xml  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/src/: conf.py  ddplan.rst  develop.rst  index.rst  index.rst.backup  install.rst  product.rst  run.rst
features/: FEATURES.md  candidate_streaming.feature  error_handling_resilience.feature  pss_sdp_configuration.feature  pss_sdp_integration.feature  sdp_candidate_reception.feature
product/: test_ingest_export.py  test_sps_emulator.py
product/features/: ingest_export.feature  sps_emulator.feature
protest/: _config.py  candidate.py  candlist.py  fil.py  pipeline.py  requester.py
protest/src/: candidate.py  candlist.py  pipeline.py
src/protest/: candidate.py  candlist.py  logparser.py  pipeline.py  requester.py
src/ska_pss_protest/: __init__.py  _config.py  candidate.py  candlist.py  conftest.py  fil.py  logparser.py  pipeline.py  protest.py  pytest.ini  requester.py  test_ingest_export.py  test_rfim.py  test_sps.py  test_sps_emulator.py  test_sps_filtered.py
src/ska_pss_protest/executors/: __init__.py  _config.py  logparser.py  pipeline.py
src/ska_pss_protest/features/: ingest_export.feature  sps_emulator.feature  sps_mid_rfim.feature  sps_mid_vector_dm_width.feature  sps_mid_vector_dm_width_filtered.feature
src/ska_pss_protest/product_tests/: test_fdas.py  test_ingest_export.py  test_rfim.py  test_rfim_fdas.py  test_rfim_sps.py  test_sps.py  test_sps_emulator.py
src/ska_pss_protest/requesters/: __init__.py  requester.py
src/ska_pss_protest/utils/: __init__.py  fil.py  ocld.py
src/ska_pss_protest/validators/: __init__.py  candidate.py  (+3 more)
tests/: test_candidate.py  test_candlist.py  test_candlist.py.remove  test_dm_plans.py  test_fdas_candlist.py  test_fil.py  test_ocld.py  test_parser.py  test_protest.py  test_requester.py  test_runner.py  test_sps_candlist.py
tests/data/: candidate_pipeline_log.json  candidate_pipeline_log.txt  cheetah_pipeline_log.json  cheetah_pipeline_log.txt  dummy_dd_plan.json  emulator_log.json  emulator_log.txt  incorrect_json.json  parser_log.json  parser_log_error.json
(+27 files in other folders)
