[tool.poetry]
name = "protest"
version = "0.1.0"
description = ""
authors = ["Benjamin  Shaw <benjamin.shaw@manchester.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
requests = "^2.28.2"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
logging = "^0.4.9.6"
pytest-bdd = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"
python_files = "test_*"
