[tool.poetry]
name = "testpkg"
version = "0.1.0"
description = ""
authors = ["Benjamin  Shaw <benjamin.shaw@manchester.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "1.19.5"
requests = "2.27.1"
pytest = "7.0.1"
pytest-mock = "3.6.1"
pytest-bdd = "5.0.0"

[tool.poetry.dev-dependencies]
pytest = "7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
