[tool.poetry]
name = "ska_pss_protest"
version = "5.2.9"
description = "The SKA PSS Product Testing Framework"
authors = ["SKA PSS Developers"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/pss/ska-pss-protest"
documentation = "https://developer.skao.int/projects/ska-pss-protest"
include = ["src/ska-pss-protest/features/*", "src/ska_pss_protest/data/config_templates/*", "src/ska_pss_protest/conftest.py", "src/ska_pss_protest/pytest.ini"]

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.scripts]
protest = 'ska_pss_protest.protest:main'

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.26.4"
requests = ">=2.31.0"
pytest-mock = ">=3.12.0"
pytest-html = ">=4.1.1"
pytest-repeat = ">=0.9.3"
pytest-bdd = ">=7.1.1"
pytest = ">=8.1.1"
pandas = ">=2.2.2"
pybind11 = ">=2.12"

[tool.poetry.group.dev.dependencies]
black = ">=24.2.0"
isort = ">=5.13.2"
flake8 = ">=7.0.0"
pylint = ">=3.1.0"
pylint-junit = ">=0.3.4"
pytest-cov = ">=4.1.0"
sphinx = ">=7.2.6"
sphinx-rtd-theme = ">=2.0.0"
recommonmark = ">=0.7.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
